fix: dark mode header

--- a/src/output.css
+++ b/src/output.css
@@ -611,10 +611,6 @@ video {
   height: 100vh;
 }
 
-.h-16 {
-  height: 4rem;
-}
-
 .w-10 {
   width: 2.5rem;
 }
@@ -751,6 +747,12 @@ video {
   opacity: 1;
 }
 
+.shadow-dark-pressed {
+  --tw-shadow: inset -2px -2px 4px 0 #fd6f88, inset 3px 3px 4px 0 #2C000F;
+  --tw-shadow-colored: inset -2px -2px 4px 0 var(--tw-shadow-color), inset 3px 3px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-light-default {
   --tw-shadow:  -2px -2px 6px 0 #fff, 5px 5px 4px 0 #D4C8CA;
   --tw-shadow-colored: -2px -2px 6px 0 var(--tw-shadow-color), 5px 5px 4px 0 var(--tw-shadow-color);
@@ -765,12 +767,6 @@ video {
 
 .shadow-light-pressed {
   --tw-shadow: inset -2px -2px 4px 0 #fff, inset 3px 3px 4px 0 #D4C8CA;
-  --tw-shadow-colored: inset -2px -2px 4px 0 var(--tw-shadow-color), inset 3px 3px 4px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-dark-pressed {
-  --tw-shadow: inset -2px -2px 4px 0 #fd6f88, inset 3px 3px 4px 0 #2C000F;
   --tw-shadow-colored: inset -2px -2px 4px 0 var(--tw-shadow-color), inset 3px 3px 4px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
@@ -797,6 +793,12 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:shadow-dark-default:hover {
+  --tw-shadow: -2px -2px 6px 0 #fd6f88, 5px 5px 4px 0 #2C000F;
+  --tw-shadow-colored: -2px -2px 6px 0 var(--tw-shadow-color), 5px 5px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .hover\:shadow-light-default:hover {
   --tw-shadow:  -2px -2px 6px 0 #fff, 5px 5px 4px 0 #D4C8CA;
   --tw-shadow-colored: -2px -2px 6px 0 var(--tw-shadow-color), 5px 5px 4px 0 var(--tw-shadow-color);
@@ -805,71 +807,6 @@ video {
 
 .hover\:shadow-light-pressed:hover {
   --tw-shadow: inset -2px -2px 4px 0 #fff, inset 3px 3px 4px 0 #D4C8CA;
-  --tw-shadow-colored: inset -2px -2px 4px 0 var(--tw-shadow-color), inset 3px 3px 4px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-dark-default:hover {
-  --tw-shadow: -2px -2px 6px 0 #fd6f88, 5px 5px 4px 0 #2C000F;
-  --tw-shadow-colored: -2px -2px 6px 0 var(--tw-shadow-color), 5px 5px 4px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-:is(.dark .dark\:block) {
-  display: block;
-}
-
-:is(.dark .dark\:hidden) {
-  display: none;
-}
-
-:is(.dark .dark\:bg-red-950) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(69 10 10 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:bg-red-pink-900) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(138 17 59 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:bg-red-pink-950) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(77 4 28 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:text-red-pink-200) {
-  --tw-text-opacity: 1;
-  color: rgb(255 204 212 / var(--tw-text-opacity));
-}
-
-:is(.dark .dark\:text-red-pink-100) {
-  --tw-text-opacity: 1;
-  color: rgb(255 228 231 / var(--tw-text-opacity));
-}
-
-:is(.dark .dark\:opacity-0) {
-  opacity: 0;
-}
-
-:is(.dark .dark\:opacity-100) {
-  opacity: 1;
-}
-
-:is(.dark .dark\:shadow-dark-default) {
-  --tw-shadow: -2px -2px 6px 0 #fd6f88, 5px 5px 4px 0 #2C000F;
-  --tw-shadow-colored: -2px -2px 6px 0 var(--tw-shadow-color), 5px 5px 4px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-:is(.dark .dark\:shadow-dark-hover) {
-  --tw-shadow: inset -4px -4px 4px 0 #fd6f88, inset 6px 6px 4px 0 #2C000F, -2px -2px 6px 0 #fd6f88, 5px 5px 4px 0 #2C000F;
-  --tw-shadow-colored: inset -4px -4px 4px 0 var(--tw-shadow-color), inset 6px 6px 4px 0 var(--tw-shadow-color), -2px -2px 6px 0 var(--tw-shadow-color), 5px 5px 4px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-:is(.dark .dark\:hover\:shadow-dark-pressed:hover) {
-  --tw-shadow: inset -2px -2px 4px 0 #fd6f88, inset 3px 3px 4px 0 #2C000F;
   --tw-shadow-colored: inset -2px -2px 4px 0 var(--tw-shadow-color), inset 3px 3px 4px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
@@ -896,48 +833,66 @@ video {
   }
 }
 
-@media (min-width: 768px) {
-  .md\:block {
-    display: block;
-  }
-
-  .md\:hidden {
-    display: none;
-  }
-}
-
 @media (min-width: 1024px) {
   .lg\:block {
     display: block;
   }
 
-  .lg\:flex {
-    display: flex;
-  }
-
-  .lg\:contents {
-    display: contents;
-  }
-
   .lg\:hidden {
     display: none;
   }
-
-  .lg\:items-center {
-    align-items: center;
-  }
-
-  .lg\:justify-between {
-    justify-content: space-between;
-  }
-
-  .lg\:rounded-full {
-    border-radius: 9999px;
-  }
 }
 
-@media (min-width: 1280px) {
-  .xl\:block {
-    display: block;
-  }
+.dark\:block:where(.dark, .dark *) {
+  display: block;
+}
+
+.dark\:hidden:where(.dark, .dark *) {
+  display: none;
+}
+
+.dark\:bg-red-950:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(69 10 10 / var(--tw-bg-opacity));
+}
+
+.dark\:bg-red-pink-900:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(138 17 59 / var(--tw-bg-opacity));
+}
+
+.dark\:bg-red-pink-950:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(77 4 28 / var(--tw-bg-opacity));
+}
+
+.dark\:text-red-pink-100:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(255 228 231 / var(--tw-text-opacity));
+}
+
+.dark\:opacity-0:where(.dark, .dark *) {
+  opacity: 0;
+}
+
+.dark\:opacity-100:where(.dark, .dark *) {
+  opacity: 1;
+}
+
+.dark\:shadow-dark-default:where(.dark, .dark *) {
+  --tw-shadow: -2px -2px 6px 0 #fd6f88, 5px 5px 4px 0 #2C000F;
+  --tw-shadow-colored: -2px -2px 6px 0 var(--tw-shadow-color), 5px 5px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.dark\:shadow-dark-hover:where(.dark, .dark *) {
+  --tw-shadow: inset -4px -4px 4px 0 #fd6f88, inset 6px 6px 4px 0 #2C000F, -2px -2px 6px 0 #fd6f88, 5px 5px 4px 0 #2C000F;
+  --tw-shadow-colored: inset -4px -4px 4px 0 var(--tw-shadow-color), inset 6px 6px 4px 0 var(--tw-shadow-color), -2px -2px 6px 0 var(--tw-shadow-color), 5px 5px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.dark\:hover\:shadow-dark-pressed:hover:where(.dark, .dark *) {
+  --tw-shadow: inset -2px -2px 4px 0 #fd6f88, inset 3px 3px 4px 0 #2C000F;
+  --tw-shadow-colored: inset -2px -2px 4px 0 var(--tw-shadow-color), inset 3px 3px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
